--- a/webcam.ipynb
+++ b/webcam.ipynb
@@ -4,7 +4,42 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "Sad Pooja found!\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This module is the main module in this package. It loads emotion recognition model from a file,\n",
@@ -13,8 +48,14 @@
     "from cv2 import WINDOW_NORMAL\n",
     "\n",
     "import cv2\n",
+    "import numpy as np\n",
     "from face_detect import find_faces\n",
     "from image_commons import nparray_as_image, draw_with_alpha\n",
+    "import PIL.Image\n",
+    "from tkinter import *\n",
+    "\n",
+    "\n",
+    "faceCascade = cv2.CascadeClassifier('haarcascade_files/haarcascade_frontalface_default.xml')\n",
     "\n",
     "\n",
     "def _load_emoticons(emotions):\n",
@@ -26,7 +67,7 @@
     "    return [nparray_as_image(cv2.imread('graphics/%s.png' % emotion, -1), mode=None) for emotion in emotions]\n",
     "\n",
     "\n",
-    "def show_webcam_and_run(model, emoticons, window_size=None, window_name='webcam', update_time=10):\n",
+    "def show_webcam_and_run(model,recognizer, emoticons, window_size=None, window_name='webcam', update_time=10):\n",
     "    \"\"\"\n",
     "    Shows webcam image, detects faces and its emotions in real time and draw emoticons over those faces.\n",
     "    :param model: Learnt emotion detection model.\n",
@@ -35,6 +76,16 @@
     "    :param window_name: Name of webcam image window.\n",
     "    :param update_time: Image update time interval.\n",
     "    \"\"\"\n",
+    "#     root = Tk()\n",
+    "\n",
+    "#     var = StringVar()\n",
+    "#     label = Message( root, textvariable=var, relief=RAISED )\n",
+    "\n",
+    "#     var.set(\"Hey!? How are you doing?\")\n",
+    "#     label.pack()\n",
+    "#     root.mainloop()\n",
+    "    nbr_predicted = 0\n",
+    "    prediction = 100\n",
     "    cv2.namedWindow(window_name, WINDOW_NORMAL)\n",
     "    if window_size:\n",
     "        width, height = window_size\n",
@@ -48,22 +99,77 @@
     "        return\n",
     "\n",
     "    while read_value:\n",
+    "        gray = cv2.cvtColor(webcam_image, cv2.COLOR_BGR2GRAY)\n",
+    "        faces = faceCascade.detectMultiScale(webcam_image)\n",
+    "        cutted_faces = [webcam_image[y:y + h, x:x + w] for (x, y, w, h) in faces]\n",
+    "        for normalized_face, (x, y, w, h) in find_faces(webcam_image):  \n",
+    "            predict_image = np.array(normalized_face, 'uint8')\n",
+    "            nbr_predicted = recognizer.predict(predict_image)\n",
+    "#             if(nbr_predicted == 17):\n",
+    "            cv2.rectangle(webcam_image, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "#             print(nbr_predicted)\n",
+    "            cv2.imshow(\"Recognizing Face\", predict_image)\n",
+    "            cv2.waitKey(1000)\n",
+    "#             nbr_predicted = recognizer.predict(webcam_image[y: y + h, x: x + w])\n",
+    "#             cv2.imshow(\"Recognizing Face\", predict_image[y: y + h, x: x + w])\n",
+    "#             cv2.waitKey(1000)\n",
+    "#         for face in cutted_faces:\n",
+    "#             cv2.imwrite('opencv1.jpg',face)\n",
+    "#             predict_image_pil = PIL.Image.open('opencv1.jpg').convert('L')\n",
+    "#             predict_image = np.array(predict_image_pil, 'uint8')\n",
+    "#             faces = faceCascade.detectMultiScale(predict_image)\n",
+    "#             for (x, y, w, h) in faces:        \n",
+    "#                 nbr_predicted = recognizer.predict(predict_image)\n",
+    "# #                 cv2.rectangle(webcam_image, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "#                 print(nbr_predicted)\n",
+    "#                 cv2.imshow(\"Recognizing Face\", predict_image)\n",
+    "#                 cv2.waitKey(1000)\n",
+    "#         cv2.imshow('Video', webcam_image)\n",
+    "        \n",
     "        for normalized_face, (x, y, w, h) in find_faces(webcam_image):\n",
     "            prediction = model.predict(normalized_face)  # do prediction\n",
     "            if cv2.__version__ != '3.1.0':\n",
     "                prediction = prediction[0]\n",
-    "\n",
+    "#             print(prediction)\n",
     "            image_to_draw = emoticons[prediction]\n",
     "            draw_with_alpha(webcam_image, image_to_draw, (x, y, w, h))\n",
-    "\n",
+    "#             predict_image_pil = normalized_face\n",
+    "#             predict_image = cv2.resize(normalized_face, (320, 243))\n",
+    "#             predict_image = np.array(normalized_face, 'uint8')\n",
+    "#             print(normalized_face[y: y + h, x: x + w])\n",
+    "#             print(y)\n",
+    "#             print(h)\n",
+    "#             print(x)\n",
+    "#             print(w)\n",
+    "#             nbr_predicted = recognizer.predict(normalized_face)\n",
+    "            \n",
     "        cv2.imshow(window_name, webcam_image)\n",
     "        read_value, webcam_image = vc.read()\n",
-    "        key = cv2.waitKey(update_time)\n",
-    "\n",
-    "        if key == 27:  # exit on ESC\n",
+    "        \n",
+    "        if(nbr_predicted == 17 and prediction == 4):\n",
+    "            print(\"Sad Pooja found!\")\n",
     "            break\n",
+    "#         print(prediction)\n",
     "\n",
-    "    cv2.destroyWindow(window_name)\n",
+    "        key = cv2.waitKey(update_time)\n",
+    "        print(key)\n",
+    "        if key == 27:\n",
+    "            break\n",
+    "    \n",
+    "#     if(nbr_predicted == 17 and prediction == 0):\n",
+    "#         root = Tk()\n",
+    "#         var = StringVar()\n",
+    "#         label = Message( root, textvariable=var, relief=RAISED )\n",
+    "\n",
+    "#         var.set(\"Hi Pooja! I unlocked for you!\")\n",
+    "#         label.pack()\n",
+    "#         root.mainloop()\n",
+    "\n",
+    "\n",
+    "# cv2.destroyAllWindows()\n",
+    "\n",
+    "    cv2.destroyAllWindows()\n",
+    "    cv2.waitKey(1)\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
@@ -73,14 +179,25 @@
     "    # load model\n",
     "    if cv2.__version__ == '3.1.0':\n",
     "        fisher_face = cv2.face.createFisherFaceRecognizer()\n",
+    "        recognizer = cv2.face.createLBPHFaceRecognizer()\n",
     "    else:\n",
     "        fisher_face = cv2.createFisherFaceRecognizer()\n",
     "    fisher_face.load('models/emotion_detection_model.xml')\n",
+    "    recognizer.load('models/face_detection_model.xml')\n",
     "\n",
     "    # use learnt model\n",
     "    window_name = 'WEBCAM (press ESC to exit)'\n",
-    "    show_webcam_and_run(fisher_face, emoticons, window_size=(1600, 1200), window_name=window_name, update_time=8)"
+    "    show_webcam_and_run(fisher_face,recognizer, emoticons, window_size=(1600, 1200), window_name=window_name, update_time=8)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
